replication/sutra-replication-package/sdk/sutra-compiler/tests/corpus/invalid/17_class_extends_unknown.su
// Expected error: SUT0142 — class extends an unknown name.
// `Mystery` is neither a primitive type nor a previously-declared
// class.

class Foo extends Mystery { }
